welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: Int does not take parameters
    if (nums.length(i)==lookingFor)
                   ^