welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var compteur = 0
  for (i <- 0 to nums.length -1)
  {
    if (nums.length(i)==lookingFor)
    	compteur +=1
  }
  return compteur
}